media/css/firefox/android.less
/* ... */
// Newsletter / Download

#subscribe-download-wrapper {
    background: #0092db;
    color: #fff;
    padding-top: @baseLine * 2;

    h3 {
        font-size: 40px;
        color: #fff;
        text-shadow: none;
        margin-bottom: @baseLine;
    }

    .billboard {
        padding-top: 0;
    }
}

.sky #subscribe-download-wrapper {
    a {
        color: #fff;
        text-decoration: underline;
    }

    .dl-button {
        font-size: @baseFontSize;
        padding: @baseLine (@baseLine * 2);
        margin-bottom: @baseLine / 2;
        text-decoration: none;
    }
}

#download-wrapper {
    float: left;
    width: 480px;
    margin-right: 80px;
    .clearfix();

    li {
        list-style-type: none;
        margin-left: 0;
    }
}

#footer-logo {
    width: 144px;
    height: 150px;
    float: left;
    margin-right: @baseLine;
}

#download-content {
    float: left;
    width: 316px;
}

#subscribe-wrapper {
    .billboard {
        background: #0092db;
        box-shadow: none;
        border-bottom: 0;
    }

    // Firefox Android users will not see the download button, so the
    // newsletter form will fall back to being full-width
    &.floating {
        float: left;
        width: 380px;

        .newsletter-form {
            h3,
            .form-contents,
            .form-submit {
                float: none;
                margin-left: 0;
                margin-right: 0;
            }

            input[type="email"] {
                // inherits 15px left/right padding
                width: 310px;
            }

            .form-submit {
                width: 340px;
                float: none;
            }

            .form-contents {
                width: 340px;
            }
        }
    }
}

.newsletter-form {
    input[type="email"] {
        border-width: 0;
        box-shadow: none;
        padding: 15px;
    }
}

#footer_email_submit {
    display: block;
    width: 100%;
    background: #0092db;
    border: 2px solid #fff;
    padding: 15px 0;
    text-transform: uppercase;
    border-radius: 3px;
    box-shadow: none;
}

/****************************************************************************/
// @High resolution images for @retina-type displays
// Desktop
@media (-webkit-min-device-pixel-ratio: 1.5),
       (                min-resolution: 1.5dppx),
       (                min-resolution: 144dpi) {

    .js {
        .customize-section .line {
            background-image: url(/media/img/firefox/android/customize/sprite-lines-high-res.png);
            .background-size(249px, 428px);
        }

        .customize-pager {
            background-image: url(/media/img/firefox/android/customize/sprite-arrows-high-res.png);
            .background-size(56px, 44px);
        }
    }

    #phone-wrapper {
        background-image: url(/media/img/firefox/android/customize/bg-phone-high-res.jpg);
        .background-size(224px, 453px);
    }

    #privacy li {
        background-image: url(/media/img/firefox/android/sprite-privacy-high-res.png);
        .background-size(1200px, 142px);
    }
}
/* ... */

